--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ jobs:
         - libatomic-ops-dev
     env:
     - MAKEFILE_TARGETS="distcheck"
-    - GC_REAL_VERSION=7.2p
+    - GC_REAL_VERSION=7.2q
     - AO_SRC_VER=v7.2k
 
 before_install:
