Eliminate 'no previous prototype' clang warning in misc.c and reclaim.c
Issue #558 (bdwgc).

* CMakeLists.txt [enable_gc_assertions]: Add TODO (about
"-Wno-missing-prototypes" option).
* misc.c [!ALWAYS_SMALL_CLEAR_STACK && !STACK_NOT_SCANNED]
(CLEARSTACK_LIMIT_MODIFIER): Define macro.
* misc.c [!ALWAYS_SMALL_CLEAR_STACK && !STACK_NOT_SCANNED]
(GC_clear_stack_inner): Declare (inside EXTERN_C_BEGIN/END).
* reclaim.c (GC_n_set_marks): Likewise.
* misc.c [!ALWAYS_SMALL_CLEAR_STACK && !STACK_NOT_SCANNED]
(GC_clear_stack_inner): Use CLEARSTACK_LIMIT_MODIFIER.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,7 +160,7 @@ elseif (WATCOM)
     add_compile_options(/wcd=201)
   endif()
 else()
-  # TODO add -[W]pedantic -Wno-long-long
+  # TODO: add -[W]pedantic -Wno-long-long
   add_compile_options(-Wall -Wextra)
 endif()
 
@@ -381,6 +381,8 @@ endif()
 
 if (enable_gc_assertions)
   add_definitions("-DGC_ASSERTIONS")
+  # TODO: pass -Wno-missing-prototypes (if supported) to turn off the clang
+  # warning for STATIC functions.
 endif()
 
 if (NOT enable_threads_discovery)
