Fix 'g++ not found' error on OpenBSD (Makefile.direct)
* Makefile.direct (CXX): Use c++ instead of g++.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -26,7 +26,7 @@ AS_ABI_FLAG?= $(ABI_FLAG)
 CC?= cc $(ABI_FLAG)
 # Compiler executable name.  For EMX, replace to "gcc".
 
-CXX?= g++ $(ABI_FLAG)
+CXX?= c++ $(ABI_FLAG)
 # Needed only for "make c++", which builds the C++ interface.
 
 AS= as $(AS_ABI_FLAG)
