Fix 'g++ not found' error on OpenBSD (Makefile.direct) (a cherry-pick of commit 3d5771cff from 'release-7_4')
* Makefile.direct (CXX): Use c++ instead of g++.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -20,7 +20,7 @@ AS_ABI_FLAG=$(ABI_FLAG)
 # executables.
 
 CC=cc $(ABI_FLAG)
-CXX=g++ $(ABI_FLAG)
+CXX= c++ $(ABI_FLAG)
 AS=as $(AS_ABI_FLAG)
 #  The above doesn't work with gas, which doesn't run cpp.
 #  Define AS as `gcc -c -x assembler-with-cpp' instead.
