Fix 'g++ not found' error on OpenBSD (Makefile.direct) (a cherry-pick of commit d94f073c3 from 'release-8_2')
* Makefile.direct (CXX): Use c++ instead of g++.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -23,7 +23,7 @@ AS_ABI_FLAG=$(ABI_FLAG)
 
 CC=cc $(ABI_FLAG)
 
-CXX=g++ $(ABI_FLAG)
+CXX= c++ $(ABI_FLAG)
 # Needed only for "make c++", which adds the c++ interface.
 
 AS=as $(AS_ABI_FLAG)
