Fix 'undefined reference' linker errors if shared build on OpenBSD (CMake)
The workaround is not to pass --no-undefined to linker on BSD hosts.

* CMakeLists.txt [BUILD_SHARED_LIBS] (WL_NO_UNDEFINED_OPT,
HAVE_FLAG_WL_NO_UNDEFINED): Do not set and use if $CMAKE_SYSTEM_NAME
matches "BSD".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -460,12 +460,14 @@ if (BUILD_SHARED_LIBS)
   else()
     add_definitions("-DGC_NO_VISIBILITY")
   endif()
-  if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
-    set(WL_NO_UNDEFINED_OPT "-Wl,--no-undefined")
-    check_c_compiler_flag(${WL_NO_UNDEFINED_OPT} HAVE_FLAG_WL_NO_UNDEFINED)
-  else()
-    set(WL_NO_UNDEFINED_OPT "LINKER:--no-undefined")
-    check_linker_flag(C "${WL_NO_UNDEFINED_OPT}" HAVE_FLAG_WL_NO_UNDEFINED)
+  if (NOT (${CMAKE_SYSTEM_NAME} MATCHES "BSD"))
+    if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
+      set(WL_NO_UNDEFINED_OPT "-Wl,--no-undefined")
+      check_c_compiler_flag(${WL_NO_UNDEFINED_OPT} HAVE_FLAG_WL_NO_UNDEFINED)
+    else()
+      set(WL_NO_UNDEFINED_OPT "LINKER:--no-undefined")
+      check_linker_flag(C "${WL_NO_UNDEFINED_OPT}" HAVE_FLAG_WL_NO_UNDEFINED)
+    endif()
   endif()
 else()
   add_definitions("-DGC_NOT_DLL")
