Fix 'linker input unused' error inside check_c_compiler_flag (CMake)
* CMakeLists.txt [!BORLAND && !MSVC && !WATCOM && HAVE_FLAG_WERROR]
(HAVE_FLAG_WNO_UNUSED_CMDLINE_ARG): Set if the relevant compiler flag
is supported (before update of CMAKE_REQUIRED_FLAGS); add comment.
* CMakeLists.txt [!BORLAND && !MSVC && !WATCOM && HAVE_FLAG_WERROR
&& HAVE_FLAG_WNO_UNUSED_CMDLINE_ARG] (CMAKE_REQUIRED_FLAGS): Append
"-Wno-unused-command-line-argument".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -446,7 +446,14 @@ SET(CMAKE_REQUIRED_FLAGS "-c")
 if (NOT BORLAND AND NOT MSVC AND NOT WATCOM)
   check_c_compiler_flag(-Werror HAVE_FLAG_WERROR)
   if (HAVE_FLAG_WERROR)
+    check_c_compiler_flag(-Wno-unused-command-line-argument
+                          HAVE_FLAG_WNO_UNUSED_CMDLINE_ARG)
     SET(CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS} -Werror")
+    # Prevent "linker input unused" error in further check_c_compiler_flag.
+    if (HAVE_FLAG_WNO_UNUSED_CMDLINE_ARG)
+      SET(CMAKE_REQUIRED_FLAGS
+          "${CMAKE_REQUIRED_FLAGS} -Wno-unused-command-line-argument")
+    endif()
   endif(HAVE_FLAG_WERROR)
 endif()
 
