Set name of GC marker threads on OpenBSD
* CMakeLists.txt [enable_threads && CMAKE_USE_PTHREADS_INIT
&& !HAVE_PTHREAD_SETNAME_NP_WITHOUT_TID
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID] (HAVE_PTHREAD_SET_NAME_NP): Set
if pthread_set_name_np() is available (after include pthread_np.h).
* configure.ac [$THREADS=posix && !HAVE_PTHREAD_SETNAME_NP_WITHOUT_TID
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID]: Print that pthread_setname_np
is missing; check availability of pthread_set_name_np() after include
pthread_np.h (define HAVE_PTHREAD_SET_NAME_NP macro if the function is
not missing).
* pthread_support.c [PARALLEL_MARK && HAVE_PTHREAD_SET_NAME_NP
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG]: Include pthread_np.h.
* pthread_support.c [PARALLEL_MARK && HAVE_PTHREAD_SET_NAME_NP
&& !HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG] (set_marker_thread_name):
Implement using pthread_set_name_np().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -560,7 +560,18 @@ int main(void) {\n
       if (HAVE_PTHREAD_SETNAME_NP_WITH_TID)
         # Define to use 'pthread_setname_np(pthread_t, const char*)' function.
         add_definitions("-DHAVE_PTHREAD_SETNAME_NP_WITH_TID")
-      endif()
+      else()
+        check_c_source_compiles("
+#include <pthread.h>\n
+#include <pthread_np.h>\n
+int main(void) {\n
+  pthread_set_name_np(pthread_self(), \"thread-name\"); return 0; }"
+          HAVE_PTHREAD_SET_NAME_NP)
+        if (HAVE_PTHREAD_SET_NAME_NP)
+          # Define to use 'pthread_set_name_np(pthread_t, const char*)'.
+          add_definitions("-DHAVE_PTHREAD_SET_NAME_NP")
+        endif()
+      endif(HAVE_PTHREAD_SETNAME_NP_WITH_TID)
     endif(HAVE_PTHREAD_SETNAME_NP_WITH_TID_AND_ARG)
   endif (HAVE_PTHREAD_SETNAME_NP_WITHOUT_TID)
 endif()
