Do not check dl_iterate_phdr presence by build scripts on OS X and Win32 (refactoring)
* CMakeLists.txt [!WIN32] (HAVE_DL_ITERATE_PHDR): Do not define (check
dl_iterate_phdr presence) if APPLE.
* configure.ac (dl_iterate_phdr): Do not AC_CHECK_FUNCS() if $host
matches "cygwin", "darwin" or "msys".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -523,7 +523,7 @@ int main(void) { ucontext_t ctxt; (void)getcontext(&ctxt); return 0; }"
 endif()
 
 # Check whether dl_iterate_phdr exists (as a strong symbol).
-if (NOT WIN32)
+if (NOT (APPLE OR WIN32))
   check_function_exists(dl_iterate_phdr HAVE_DL_ITERATE_PHDR)
   if (HAVE_DL_ITERATE_PHDR)
     add_definitions("-DHAVE_DL_ITERATE_PHDR")
