Fix '--no-undefined' linker flag checking in CMake script (fix of commit d82af8d05)
* CMakeLists.txt [BUILD_SHARED_LIBS] (WL_NO_UNDEFINED_OPT,
HAVE_FLAG_WL_NO_UNDEFINED): Move definition upper to be before
CMAKE_REQUIRED_FLAGS is set to "-c"; add comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -437,6 +437,18 @@ if (MSVC)
   set(SRC ${SRC} extra/msvc_dbg.c)
 endif()
 
+# Declare that the libraries do not refer to external symbols.
+if (BUILD_SHARED_LIBS AND NOT (${CMAKE_SYSTEM_NAME} MATCHES "BSD"))
+  # Note: performed before CMAKE_REQUIRED_FLAGS is updated with "-c".
+  if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
+    set(WL_NO_UNDEFINED_OPT "-Wl,--no-undefined")
+    check_c_compiler_flag(${WL_NO_UNDEFINED_OPT} HAVE_FLAG_WL_NO_UNDEFINED)
+  else()
+    set(WL_NO_UNDEFINED_OPT "LINKER:--no-undefined")
+    check_linker_flag(C "${WL_NO_UNDEFINED_OPT}" HAVE_FLAG_WL_NO_UNDEFINED)
+  endif()
+endif()
+
 # Instruct check_c_source_compiles to skip linking.
 # Alternatively, we could set CMAKE_REQUIRED_LIBRARIES properly.
 SET(CMAKE_REQUIRED_FLAGS "-c")
@@ -466,15 +478,6 @@ if (BUILD_SHARED_LIBS)
     add_compile_options(-fvisibility=hidden)
   else()
     add_definitions("-DGC_NO_VISIBILITY")
-  endif()
-  if (NOT (${CMAKE_SYSTEM_NAME} MATCHES "BSD"))
-    if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
-      set(WL_NO_UNDEFINED_OPT "-Wl,--no-undefined")
-      check_c_compiler_flag(${WL_NO_UNDEFINED_OPT} HAVE_FLAG_WL_NO_UNDEFINED)
-    else()
-      set(WL_NO_UNDEFINED_OPT "LINKER:--no-undefined")
-      check_linker_flag(C "${WL_NO_UNDEFINED_OPT}" HAVE_FLAG_WL_NO_UNDEFINED)
-    endif()
   endif()
 else()
   add_definitions("-DGC_NOT_DLL")
